# goosepaper

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.alpine  LICENSE  README.md  convert.sh  daily.frof  docker-compose.yml  example-config.json  goosepaper.json  main.py  manifest.in  pyproject.toml  remarkable.frof  requirements.txt  setup.py  test.frof  testconfig.json
.github/workflows/: docker-publish.yml  dockerhub-publish.yml  python-package.yml
docs/: Customizing.md  StyleGallery.md  example-oct-12-2020.html  example_library_usage.py
docs/reference/goosepaper/: goosepaper.md  multiparser.py.md  util.py.md
docs/reference/storyprovider/: storyprovider.py.md  twitter.py.md  wikipedia.py.md
frofs/: pdfonly.frof
goosepaper/: YrStoryProvider.py  __init__.py  __main__.py  auth.py  config.py  goosepaper.json  goosepaper.py  layout.py  multiparser.py  reddit.py  rss.py  story.py  storyprovider.py  styles.py  test_config.py  test_goosepaper.py  test_remarkapy.py  test_upload.py  test_utils.py  twitter.py  upload.py  util.py  weather.py  wikipedia.py
goosepaper/assets/styles/Academy/: stylesheet.css
goosepaper/storyprovider/: __init__.py  bluesky.py  mastodon.py  reddit.py  rss.py  storyprovider.py  test_bluesky.py  test_mastodon.py  test_reddit.py  test_rss.py  test_weather.py  twitter.py  weather.py  wikipedia.py
styles/Academy/: stylesheet.css
styles/Autumn/: stylesheet.css
styles/FifthAvenue/: stylesheet.css  stylesheets.txt
tests/: test_goosepaper.py  test_utils.py
(+5 files in other folders)
